--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "Tyler Mercer",
   "license": "UNLICENSED",
   "dependencies": {
+    "node-static": "^0.7.11",
     "socket.io": "^4.0.0"
   }
 }
