--- a/.github/workflows/main_sixtakesgame.yml
+++ b/.github/workflows/main_sixtakesgame.yml
@@ -22,6 +22,7 @@ jobs:
         node-version: '12.x'
 
     - name: npm install, build, and test
+      working-directory: ./backend
       run: |
         npm install
         npm run build --if-present
@@ -31,7 +32,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: node-app
-        path: .
+        path: ./backend
 
   deploy:
     runs-on: ubuntu-latest
