--- a/backend/package.json
+++ b/backend/package.json
@@ -2,15 +2,17 @@
   "name": "six-takes-backend",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "private": "true",
   "scripts": {
-    "start": "node index.js"
+    "start": "tsc && node dist/index.js"
   },
   "author": "Tyler Mercer",
   "license": "UNLICENSED",
   "dependencies": {
+    "@types/socket.io": "^2.1.13",
     "node-static": "^0.7.11",
-    "socket.io": "^4.0.0"
+    "socket.io": "^4.0.0",
+    "typescript": "^4.2.4"
   }
 }
