Update deployment to deploy dist folder
It didn't work from within VS Code, so I think I may have done
something wrong. The error was 'Couldn't detect a version for the
platform 'nodejs' in the repo.'

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,10 @@
   "name": "six-takes-backend",
   "version": "0.1.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "private": "true",
   "scripts": {
+    "build": "tsc",
     "start": "tsc && node dist/index.js"
   },
   "author": "Tyler Mercer",
