--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
     ".vscode{,/**}"
   ],
   "appService.defaultWebAppToDeploy": "/subscriptions/4fe31440-80d4-4194-94e1-9a7596b53356/resourceGroups/appsvc_linux_centralus/providers/Microsoft.Web/sites/sixtakesgame",
-  "appService.deploySubpath": "backend"
+  "appService.deploySubpath": "backend/dist"
 }
