Update start script
Based on scripts here: https://github.com/microsoft/TypeScript-Node-Starter/blob/master/package.json

Now the entire folder is deployed, so that Azure can check the node
version, but npm start will run the file from dist without doing the
build step first (since that's already taken care of by build step in
the github action).

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "private": "true",
   "scripts": {
     "build": "tsc",
-    "start": "tsc && node dist/index.js"
+    "serve": "node dist/index.js",
+    "start": "npm run serve",
+    "dev": "tsc && node dist/index.js"
   },
   "author": "Tyler Mercer",
   "license": "UNLICENSED",
