--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.11.10",
     "core-js": "^3.6.5",
-    "socket.io-client": "^4.0.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
